<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>org.opensplice.dds.api.dcps.java.cj_y2038</groupId>
    <artifactId>dcpscj_y2038_ready</artifactId>
    <name>api.dcps.java.${project.artifactId}</name>
    <version>1.0</version>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <gen-idl-dir>${project.build.directory}/generated-sources/idl/</gen-idl-dir>
        <dds_builtinTopics>-l java -C -I${env.OSPL_HOME_NORMALIZED}/etc ${env.OSPL_HOME_NORMALIZED}/etc/idl/dds_builtinTopics.idl</dds_builtinTopics>
        <dds_namedQosTypes>-l java -C -I${env.OSPL_HOME_NORMALIZED}/etc ${env.OSPL_HOME_NORMALIZED}/etc/idl/dds_namedQosTypes.idl</dds_namedQosTypes>
        <dds_IoTData>-l java -C -I${env.OSPL_HOME_NORMALIZED}/etc ${env.OSPL_HOME_NORMALIZED}/etc/idl/dds_IoTData.idl</dds_IoTData>
        <idlpp_exec>idlpp</idlpp_exec>
        <java_exec>java</java_exec>
        <jacorb_classpath>-classpath '${env.JACORB_HOME_NORMALIZED}/lib/idl.jar${path.separator}${env.JACORB_HOME_NORMALIZED}/lib/endorsed/logkit.jar'</jacorb_classpath>
        <jacorb_common>${jacorb_classpath} org.jacorb.idl.parser -DOSPL_DDS_Y2038_READY -I'${env.OSPL_HOME_NORMALIZED}/etc/idl' -all -d ${gen-idl-dir}</jacorb_common>
        <dds_builtinTopics_jacorb>${jacorb_common} ${gen-idl-dir}/dds_builtinTopicsDcps.idl</dds_builtinTopics_jacorb>
        <dds_namedQosTypes_jacorb>${jacorb_common} ${gen-idl-dir}/dds_namedQosTypesDcps.idl</dds_namedQosTypes_jacorb>
        <dds_IoTData_jacorb>${jacorb_common} ${gen-idl-dir}/dds_IoTDataDcps.idl</dds_IoTData_jacorb>
        <endorsed_dir>${env.JACORB_HOME_NORMALIZED}/lib/endorsed</endorsed_dir>
        <include_common>${env.OSPL_HOME_NORMALIZED}/src/api/dcps/java/common/java/code</include_common>
        <include_lang>${env.OSPL_HOME_NORMALIZED}/src/api/dcps/java/cj/code</include_lang>
    </properties>
    <parent>
        <groupId>org.opensplice.dds.api.dcps.java</groupId>
        <artifactId>org.opensplice.dds.api.dcps.java</artifactId>
        <version>1.0</version>
    </parent>
    <profiles>
        <profile>
            <id>maven-3</id>
            <activation>
                <file>
                    <!-- This employs that the basedir expression is only recognized by Maven 3.x (see MNG-2363) -->
                    <exists>${basedir}</exists>
                </file>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-compiler-plugin</artifactId>
                        <version>3.7.0</version>
                    </plugin>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>build-helper-maven-plugin</artifactId>
                        <version>1.12</version>
                        <executions>
                            <execution>
                                <id>obj-uptodate</id>
                                <goals>
                                    <goal>uptodate-property</goal>
                                </goals>
                                <configuration>
                                    <name>idl.recompile</name>
                                    <value>true</value>
                                    <else>false</else>
                                    <fileSet>
                                        <directory>${env.OSPL_HOME_NORMALIZED}/etc/idl/</directory>
                                        <outputDirectory>${gen-idl-dir}</outputDirectory>
                                        <includes>
                                            <include>dds_builtinTopics.idl</include>
                                            <include>dds_namedQosTypes.idl</include>
                                            <include>dds_IoTData.idl</include>
                                        </includes>
                                        <mapper>
                                            <type>merge</type>
                                            <from>*.idl</from>
                                            <to>DDS/TypeHash.java</to>
                                        </mapper>
                                    </fileSet>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>javadoc</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <executions>
                            <execution>
                                <id>attach-javadocs</id>
                                <phase>package</phase>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-antrun-plugin</artifactId>
                        <executions>
                            <execution>
                                <id>copy-javadoc</id>
                                <phase>package</phase>
                                <goals>
                                    <goal>run</goal>
                                </goals>
                                <configuration>
                                    <target>
                                        <copy todir="${env.OSPL_HOME_NORMALIZED}/jar/${env.SPLICE_TARGET}">
                                            <fileset dir="${project.build.directory}">
                                                <include name="${project.artifactId}-javadoc.jar" />
                                            </fileset>
                                        </copy>
                                    </target>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>source</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-source-plugin</artifactId>
                        <executions>
                            <execution>
                                <id>attach-sources</id>
                                <phase>package</phase>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-antrun-plugin</artifactId>
                        <executions>
                            <execution>
                                <id>copy-sources</id>
                                <phase>package</phase>
                                <goals>
                                    <goal>run</goal>
                                </goals>
                                <configuration>
                                    <target>
                                        <copy todir="${env.OSPL_HOME_NORMALIZED}/jar/${env.SPLICE_TARGET}">
                                            <fileset dir="${project.build.directory}">
                                                <include name="${project.artifactId}-sources.jar" />
                                            </fileset>
                                        </copy>
                                    </target>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
    <build>
        <plugins>
            <!-- run idlpp -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <id>generate dds_builtinTopics</id>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <skip>${idl.recompile}</skip>
                            <executable>${idlpp_exec}</executable>
                            <workingDirectory>${gen-idl-dir}</workingDirectory>
                            <commandlineArgs>${dds_builtinTopics}</commandlineArgs>
                        </configuration>
                    </execution>
                    <execution>
                        <id>generate dds_namedQosTypes</id>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <skip>${idl.recompile}</skip>
                            <executable>${idlpp_exec}</executable>
                            <workingDirectory>${gen-idl-dir}</workingDirectory>
                            <commandlineArgs>${dds_namedQosTypes}</commandlineArgs>
                        </configuration>
                    </execution>
                    <execution>
                        <id>generate dds_IoTData</id>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <skip>${idl.recompile}</skip>
                            <executable>${idlpp_exec}</executable>
                            <workingDirectory>${gen-idl-dir}</workingDirectory>
                            <commandlineArgs>${dds_IoTData}</commandlineArgs>
                        </configuration>
                    </execution>
                    <execution>
                        <id>generate dds_builtinTopics jacorb</id>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <skip>${idl.recompile}</skip>
                            <executable>${java_exec}</executable>
                            <workingDirectory>${gen-idl-dir}</workingDirectory>
                            <commandlineArgs>${dds_builtinTopics_jacorb}</commandlineArgs>
                        </configuration>
                    </execution>
                    <execution>
                        <id>generate dds_namedQosTypes jacorb</id>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <skip>${idl.recompile}</skip>
                            <executable>${java_exec}</executable>
                            <workingDirectory>${gen-idl-dir}</workingDirectory>
                            <commandlineArgs>${dds_namedQosTypes_jacorb}</commandlineArgs>
                        </configuration>
                    </execution>
                    <execution>
                        <id>generate dds_IoTData jacorb</id>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <skip>${idl.recompile}</skip>
                            <executable>${java_exec}</executable>
                            <workingDirectory>${gen-idl-dir}</workingDirectory>
                            <commandlineArgs>${dds_IoTData_jacorb}</commandlineArgs>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>1.6</source>
                    <target>1.6</target>
                    <verbose>false</verbose>
                </configuration>
                <executions>
                    <execution>
                        <id>default-compile</id>
                        <phase>compile</phase>
                        <configuration>
                            <compilerArgs>
                                <compilerArg>-Djava.endorsed.dirs=${endorsed_dir}</compilerArg>
                            </compilerArgs>
                        </configuration>
                        <goals>
                            <goal>compile</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>build-helper-maven-plugin</artifactId>
                <executions>
                    <!-- add ${gen-test-idl-dir} as sources for tests -->
                    <execution>
                        <id>add-generated-sources</id>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>add-source</goal>
                        </goals>
                        <configuration>
                            <sources>
                                <source>${gen-idl-dir}</source>
                                <source>${include_common}</source>
                                <source>${include_lang}</source>
                            </sources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <configuration>
                    <rules>
                        <requireEnvironmentVariable>
                            <variableName>OSPL_HOME_NORMALIZED</variableName>
                            <message>OSPL_HOME_NORMALIZED system variable must be set!</message>
                        </requireEnvironmentVariable>
                        <requireEnvironmentVariable>
                            <variableName>SPLICE_TARGET</variableName>
                            <message>SPLICE_TARGET system variable must be set!</message>
                        </requireEnvironmentVariable>
                        <requireEnvironmentVariable>
                            <variableName>JACORB_HOME_NORMALIZED</variableName>
                            <message>JACORB_HOME_NORMALIZED system variable must be set!</message>
                        </requireEnvironmentVariable>
                    </rules>
                    <fail>true</fail>
                </configuration>
                <executions>
                    <execution>
                        <id>enforce-property</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-antrun-plugin</artifactId>
                <executions>
                    <execution>
                        <id>copy-jars</id>
                        <phase>package</phase>
                        <goals>
                            <goal>run</goal>
                        </goals>
                        <configuration>
                            <target>
                                <copy todir="${env.OSPL_HOME_NORMALIZED}/jar/${env.SPLICE_TARGET}">
                                    <fileset dir="${project.build.directory}">
                                        <include name="${project.artifactId}.jar" />
                                    </fileset>
                                </copy>
                            </target>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-clean-plugin</artifactId>
                <configuration>
                    <filesets>
                        <fileset>
                            <directory>${env.OSPL_HOME_NORMALIZED}/jar/${env.SPLICE_TARGET}</directory>
                            <followSymlinks>false</followSymlinks>
                            <includes>
                                <include>${project.artifactId}*.jar</include>
                            </includes>
                        </fileset>
                    </filesets>
                </configuration>
            </plugin>
        </plugins>
        <finalName>${project.artifactId}</finalName>
    </build>
</project>
